AC button added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <div class="calculator-body">
         <input type="text"value="0"class="screen"/>
+
+         <button class="btn">AC</button>
          
 
          <button class="btn">4</button>
