--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <input type="text"value="0"class="screen"/>
 
          <button class="btn">AC</button>
+         <button class="btn">1</button>
          
 
          <button class="btn">4</button>
