--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
          <button class="btn">AC</button>
          <button class="btn">1</button>
+         <button class="btn">2</button>
          
 
          <button class="btn">4</button>
