--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
          <button class="btn">AC</button>
          <button class="btn">1</button>
          <button class="btn">2</button>
+         <button class="btn">3</button>
          
-
          <button class="btn">4</button>
          <button class="btn">5</button>
          <button class="btn">6</button>
